--- a/WebApp/client/public/bidirectional/index.html
+++ b/WebApp/client/public/bidirectional/index.html
@@ -11,25 +11,38 @@
 
 <body>
   <div id="container">
-    <h1>Bidirectional Sample</h1>
 
-    <div id="warning" hidden=true></div>
+    <h3>Video configuration</h3>
 
-    <div id="select">
+    <!-- <div id="warning" hidden=true></div> -->
+
+    <!-- <div id="select">
       <label for="videoSource">Video source: </label>
       <select id="videoSource" autocomplete="off"></select>
       <label for="audioSource">Audio source: </label>
       <select id="audioSource" autocomplete="off"></select>
-    </div>
+    </div> -->
 
     <div id="resolutionSelect">
       <label for="videoResolution">Video resolution: </label><select id="videoResolution" autocomplete="off"></select>
     </div>
-    <div id="resolutionInput">
+    <!-- <div id="resolutionInput">
       <label for="cameraWidth">Camera width:</label><input id="cameraWidth" type="number" min="0" max="4096" autocomplete="off" disabled>
       <label for="cameraHeight">Camera height:</label><input id="cameraHeight" type="number" min="0" max="4096" autocomplete="off" disabled>
-    </div>
+    </div> -->
 
+    <div class="box">
+      <span>Codec preferences:</span>
+      <select id="codecPreferences" autocomplete="off" disabled>
+        <option selected value="">Default</option>
+      </select>
+    </div>
+    
+    <div class="box">
+      <span>Connection ID:</span>
+      <textarea id="textForConnectionId"></textarea>
+    </div>
+    
     <div id="buttons">
       <button type="button" id="startVideoButton" autocomplete="off">Start Video</button>
       <button type="button" id="setUpButton" autocomplete="off" disabled>Set Up</button>
@@ -38,38 +51,18 @@
 
     <div id="preview">
       <div id="local">
-        <h2>Local</h2>
+        <!-- <h2>Local</h2> -->
         <video id="localVideo" playsinline autoplay muted=true></video>
         <div id="localVideoStats"></div>
       </div>
-      <div id="remote">
+      <!-- <div id="remote" hidden="true">
         <h2>Remote</h2>
         <video id="remoteVideo" playsinline autoplay></video>
         <div id="remoteVideoStats"></div>
-      </div>
+      </div> -->
     </div>
-
-    <div class="box">
-      <span>Connection ID:</span>
-      <textarea id="textForConnectionId"></textarea>
-    </div>
-    <div class="box">
-      <span>Codec preferences:</span>
-      <select id="codecPreferences" autocomplete="off" disabled>
-        <option selected value="">Default</option>
-      </select>
-    </div>
-
-    <p>For more information about <code>Bidirectional</code> sample, see <a
-        href="https://docs.unity3d.com/Packages/com.unity.renderstreaming@3.1/manual/sample-bidirectional.html">Bidirectional
-        sample</a> document page.</p>
 
     <div id="message"></div>
-
-    <section>
-      <a href="https://github.com/Unity-Technologies/UnityRenderStreaming/tree/develop/WebApp/public/bidirectional"
-        title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
-    </section>
   </div>
 </body>
 
